# GUI_Sequencer

./: .gitignore  Start_Sequencer_GUI.bat  Start_Sequencer_GUI_no_visible_console.vbs  pyproject.toml  requirements-artiq.txt
docs/: README.md  functional-architecture.md
src/sequencer_gui/: __init__.py  __main__.py  atomiq_actions.py  atomiq_status.py  git_info.py  main.py  persistence.py  process_identity.py  pycam_experiment.py  pycam_repository.py  scan_plan.py  sequence_io.py  sequencer_hero.py  single_instance.py
src/sequencer_gui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sequencer_gui/app/: __init__.py  backend.py  hero_dict_backend.py  state.py
src/sequencer_gui/domain/: __init__.py  analog_stored.py  document.py  model.py  static_defaults.py
src/sequencer_gui/software_objects/: RF_source.py  __init__.py  aom.py  current_source.py  dds.py  protocol.py  registry.py  shutter.py  ttl.py  types.py
src/sequencer_gui/software_objects/dynamical/: __init__.py  aom.py  dds.py  piezo.py  registry.py  ttl.py  voa.py
src/sequencer_gui/software_objects/static/: __init__.py  registry.py  voa.py
src/sequencer_gui/ui/: __init__.py  artiq_panel.py  block_strip.py  channel_matrix.py  device_row.py  main_window.py  row_software_selector.py  scan_panel.py  sequence_toolbar.py  static_parameters_panel.py  value_input.py
